--- a/restaurante.html
+++ b/restaurante.html
@@ -99,7 +99,7 @@
                 </html>
 
                 <body>
-                    <p><a href="restaurante.html">Todos os links acima estão neste link mesmo,
+                    <p><a href="https://github.com/Lokistrange/pwi-lucas-chambi1.git">Todos os links acima estão neste link mesmo,
                             fique a vontade :D</a></p>
 
                 </body>
