--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     }
   </style>
 </head>
+
 <h1 style="text-align: center;"><img src="https://static.vecteezy.com/system/resources/previews/009/291/628/original/restaurant-logo-design-vector.jpg" alt="9291628-restaurante-logo-design-vetor.png" width="500" height="400"></h1>
 
-<h2 style="text-align: center;">Nosso objetivo é servir o que há de melhor na gastronomia brasileira,<br>
-com a intenção de que nossos clientes possam desfrutar de comida feita na hora!!!</p></h2>
+<h3 style="text-align: center;">Nosso objetivo é servir o que há de melhor na gastronomia brasileira,<br>
+com a intenção de que nossos clientes possam desfrutar de comida feita na hora!!!</p></h3>
 
 <h6 style="background-color: rgb(0, 0, 0);">Olá</h6>
 <h1 style="text-align: center;">Três principais comidas que mais foram pedidas!!!</h1>
@@ -36,7 +37,7 @@ com a intenção de que nossos clientes possam desfrutar de comida feita na hora
 <h1 style="text-align: center;"><img src="https://www.sumerbol.com.br/uploads/images/2019/01/strogonoff-de-frango-1548843823.jpg" alt="strogonoff-de-frango-1548843823" width="400" height="300"></h1>
 
 
-<h6 style="background-color: rgb(0, 0, 0);">Você está otimo...</h6>
+<h6 style="background-color: rgb(0, 0, 0);">Você é otimo...</h6>
   <!DOCTYPE html>
   <html>
   <style>
@@ -239,5 +240,74 @@ com a intenção de que nossos clientes possam desfrutar de comida feita na hora
   <h3><li>THREADS: piorprato</li></h3>
 </ul>  
 
+</body>
+</html>
+
+
+<h6 style="background-color: black;">You are beautiful</h6>
+
+<!DOCTYPE html>
+<html>
+<style>
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #000000;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #7c4804fc;
+  color: rgb(0, 0, 0);
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #ffffff;
+}
+
+div {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+</style>
+<body>
+
+<!DOCTYPE html>
+<html>  
+<body>
+
+<h2>Exemplo:<br>
+Por favor preencha o formulario com seus dados corretos abaixo:</h2>
+
+  <form action="welcome.php" method="post">
+Name: <input type="text" name="name"><br>
+E-mail: <input type="text" name="email"><br>
+Apelido: <input type="text" name="Apelido"><br>
+CPF: <input type="text" name="CPF"><br>
+RG: <input type="text" name="RG"><br>
+País: <select id="País" name="País">
+  <option value="Argentina">Argentina</option>
+  <option value="Brasil">Brasil</option>
+  <option value="Bolivia">Bolivia</option>
+  <option value="Equador">Equador</option>
+  <option value="Paraguai">Paraguai</option>
+  <option value="Uruguai">Uruguai</option>
+  <option value="Peru">Peru</option>
+  <option value="Chile">Chile</option>
+  <option value="Colombia">Colombia</option>
+  <option value="Venezuela">Venezuela</option>
+</select> 
+<input type="submit">
+</form>
 </body>
 </html>
