--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <h1 style="text-align: center;">Seja Bem-vindos!!!</h1>
 </html>
+
 <!DOCTYPE html>
 <html>
 
@@ -23,7 +24,48 @@
 
 <h3 style="text-align: center;">Nosso objetivo é servir o que há de melhor na gastronomia brasileira,<br>
 com a intenção de que nossos clientes possam desfrutar de comida feita na hora!!!</p></h3>
+</html>
 
+<h6 style="background-color: #000000;">dsfsfsfsfs</h6>
+
+<!DOCTYPE html>
+<html>
+<body>
+
+<div class="w3-container w3-brown">
+  <h1>Tabela do restaurante</h1> 
+</div>
+
+<div class="w3-row-padding">
+  <div class="w3-third">
+    <h2>Comidas</h2>
+    <p>Os pratos mais deliciosos</p>
+    <p>Nesse restarante, você irá<br>
+       experimentar os pratos mais gostosos, avaliado e aprovado<br>
+       pelos criticos culinários...</p>
+  </div>
+
+  <div class="w3-third">
+    <h2>Cardapios</h2> 
+    <p>Nosso restaurante possui três<br>
+       tipos de cardapios, que é:<br>
+    -Almoço<br>
+    -Bebidas<br>
+    -Porções</p>
+  </div>
+
+  <div class="w3-third">
+    <h2>Redes Sociais</h2>
+    <p></p>
+    <p>No fim do site, você encontrará os nossos redes sociais do Restaurant Tagline</p>
+  </div>
+</div>
+
+</body>
+</html>
+
+<!DOCTYPE htnl>
+<html>
 <h6 style="background-color: rgb(0, 0, 0);">Olá</h6>
 <h1 style="text-align: center;">Três principais comidas que mais foram pedidas!!!</h1>
 
@@ -35,10 +77,10 @@ com a intenção de que nossos clientes possam desfrutar de comida feita na hora
 
 <h1 style="text-align: center;">STROGONOFF</h1>
 <h1 style="text-align: center;"><img src="https://www.sumerbol.com.br/uploads/images/2019/01/strogonoff-de-frango-1548843823.jpg" alt="strogonoff-de-frango-1548843823" width="400" height="300"></h1>
-
-
+</html>
 <h6 style="background-color: rgb(0, 0, 0);">Você é otimo...</h6>
-  <!DOCTYPE html>
+  
+<!DOCTYPE html>
   <html>
   <style>
     table,
@@ -311,3 +353,5 @@ País: <select id="País" name="País">
 </form>
 </body>
 </html>
+
+<h6 style="background-color: #000000;">Olá</h6>
