--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 <head>
   <style>
     body {
-      background-color: rgb(253, 212, 6);
+      background-color: rgb(255, 208, 0);
     }
   </style>
 </head>
+
+
 
 <h1 style="text-align: center;"><img src="https://static.vecteezy.com/system/resources/previews/009/291/628/original/restaurant-logo-design-vector.jpg" alt="9291628-restaurante-logo-design-vetor.png" width="500" height="400"></h1>
 
@@ -48,7 +50,7 @@ com a intenção de que nossos clientes possam desfrutar de comida feita na hora
     table,
     th,
     td {
-      border: 1px solid hs1(1, 97%, 40%);
+      border: 1px solid rgb(0, 0, 0);
     }
   </style>
 
@@ -106,7 +108,7 @@ com a intenção de que nossos clientes possam desfrutar de comida feita na hora
   table,
   th,
   td {
-    border: 1px solid #09080894;
+    border: 1px solid #fae600fa;
   }
 </style>
 
@@ -186,7 +188,7 @@ com a intenção de que nossos clientes possam desfrutar de comida feita na hora
   table,
   th,
   td {
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(255, 255, 255);
   }
 </style>
 
@@ -235,20 +237,48 @@ com a intenção de que nossos clientes possam desfrutar de comida feita na hora
   <html>
 <body>
 
-<h1>Sigam a gente nas Redes Sociais!!!</h1>
+<h1 style="text-align: center;">Siga a gente as redes sociais!!!</h1>
 
 <ul>
-  <h3><li>FACEBOOK: PiorPrato</li></h3>
-  <h3><li>INSTAGRAM: piorprato</li></h3>
-  <h3><li>BLUESKY: piorprato.bsky.social</li></h3>
-  <h3><li>THREADS: piorprato</li></h3>
+  <h3><li style="text-align: center;">FACEBOOK: PiorPrato</li></h3>
+  <h3><li style="text-align: center;">INSTAGRAM: piorprato</li></h3>
+  <h3><li style="text-align: center;">BLUESKY: piorprato.bsky.social</li></h3>
+  <h3><li style="text-align: center;">THREADS: piorprato</li></h3>
 </ul>  
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.nav {
+  background-color: rgb(255, 208, 0); 
+  list-style-type: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.nav li {
+  display: inline-block;
+  font-size: 20px;
+  padding: 20px;
+}
+</style>
+</head>
+<body>
+
+<ul class="nav">
+  <li><a href="#facebook">Facebook</a></li>
+  <li><a href="#instagram">Instagram</a></li>
+  <li><a href="#bluesky">Bluesky</a></li>  
+  <li><a href="#threads">Threads</a></li>
+</ul>
 
 </body>
 </html>
 
 
-<h6 style="background-color: black;">You are beautiful</h6>
+<h6 style="background-color: rgb(0, 0, 0);">You are beautiful</h6>
 
 <!DOCTYPE html>
 <html>
@@ -258,14 +288,14 @@ input[type=text], select {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #000000;
+  border: 1px solid #ffa600;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
 input[type=submit] {
   width: 100%;
-  background-color: #7c4804fc;
+  background-color: #ffd900fc;
   color: rgb(0, 0, 0);
   padding: 14px 20px;
   margin: 8px 0;
@@ -280,7 +310,7 @@ input[type=submit]:hover {
 
 div {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #ffd500;
   padding: 20px;
 }
 </style>
@@ -290,8 +320,8 @@ div {
 <html>  
 <body>
 
-<h2>Exemplo:<br>
-Por favor preencha o formulario com seus dados corretos abaixo:</h2>
+<h2 style="text-align: center;">Exemplo:</h2>
+<h2 style="text-align: center;">Preencha o formulario com seus dados corretamente para concluir o seu cadastro:</h2>
 
   <form action="welcome.php" method="post">
 Name: <input type="text" name="name"><br>
