--- a/index.html
+++ b/index.html
@@ -345,3 +345,41 @@ País: <select id="País" name="País">
 </form>
 </body>
 </html>
+
+<h6 style="background-color: black;">olá</h6>
+
+<h2 style="text-align: center;">Curiosidades inacreditaveis!!!</h2>
+
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.city {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border: 2px solid rgb(252, 172, 0);
+  margin: 50px;
+  padding: 50px;
+}
+</style>
+</head>
+<body>
+
+<div class="city">
+<h2>Primeira Curiosidade</h2>
+<p>O Restaurant Tagline participou de um programa do Erick Jackan chamado Pesadelo na Cozinha.</p>
+</div> 
+
+<div class="city">
+<h2>Segunda Curiosidade</h2>
+<p>Recebemos varios certificados pela limpeza do nosso restaurante, além de que os nosso <br>
+   clientes se sentirem confortaveis ao experimentarem um prato delicioso da nossa comida.</p>
+</div>
+
+<div class="city">
+<h2>Terceira Curiosidade</h2>
+<p>Os nossos clientes ficam curiosos quando perguntam sobre os preços dos nossos pratos...</p>
+</div>
+
+</body>
+</html>
