--- a/restaurante.html
+++ b/restaurante.html
@@ -3,6 +3,13 @@
 
 <head>
     <title>restaurante</title>
+    <head>
+        <style>
+          body {
+            background-color: rgb(254, 255, 249);
+          }
+        </style>
+      </head>
     <meta charset="ult-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
@@ -19,7 +26,7 @@
             background-color: rgb(253, 212, 6);
             padding: 30px;
             text-align: center;
-            font-size: 35px;
+            font-size: 30px;
             color: rgb(76, 46, 3)
         }
 
@@ -29,7 +36,7 @@
             width: 30%;
             height: 300px;
             /* only for demonstration, should be removed */
-            background: #ffffff;
+            background: rgb(254, 255, 249);
             padding: 20px;
         }
 
@@ -44,7 +51,7 @@
             padding: 20px;
             width: 70%;
             background-color: rgb(253, 212, 6);
-            height: 300px;
+            height: 400px;
             /* only for demonstration, should be removed */
         }
 
@@ -58,7 +65,7 @@
         /* Style the footer */
         footer {
             background-color: #000000;
-            padding: 10px;
+            padding: 1px;
             text-align: center;
             color: rgb(255, 255, 255);
         }
@@ -77,31 +84,31 @@
 
 <body>
 
-    <h2>Restaurante estranho</h2>
-    <p>Não sei mais o que estou fazendo,</p>
-    <p>Seriamente, eu não sei.</p>
+    <h2 style="text-align: center;">Restaurante Tagline</h2>
+    <p style="text-align: center;">Para mais informações sobre o restaurante, <br>
+        por favor, consulte os detalhes a seguir:</p>
+    
 
     <header>
-        <h2>Restaurante</h2>
+        <h2>-_Restaurante Tagline_-</h2>
     </header>
 
     <section>
         <nav>
             <ul>
-                <li><a href="#">Três pratos mais servidos da casa!</a></li>
-                ------------------------------
-                <li><a href="#">Cardapios!</a></li>
-                ------------------------------
-                <li><a href="#">Sigam a gente!</a></li>
+                <li><a href="#"><p style="text-align: center;">Os pratos mais servidos da casa!</a></li>
+                <br>
+                <li><a href="#"><p style="text-align: center;">Cardapios do Restaurante Tagline!</a></li>
+                <br>
+                <li><a href="#"><p style="text-align: center;">Sigam a gente nas redes sociais!</a></li>
+                <br>
                 <html>
-                ------------------------------
 
                 </html>
-
+                
                 <body>
-                    <p><a href="https://github.com/Lokistrange/pwi-lucas-chambi1.git">Todos os links acima estão neste link do github no "index.html" mesmo,
-                            fique a vontade :D</a></p>
-
+                    <p><a href="https://github.com/Lokistrange/pwi-lucas-chambi1">Todos os links mencionados acima estão disponíveis neste único link.<br>
+                        Fique a vontade para explorar (index.html)</a></p>
                 </body>
 
 </html>
@@ -111,19 +118,18 @@
 </nav>
 
 <article>
-    <h1>O que Karambas é a gente?!</h1>
-    <p>Opa bom dia degustadores de São Paulo, de boa? Então beleza, vamos dar as boas-vindas ao nosso incrivel
-        restaurante mais estranho...!!!</p>
-    <p>Começando nos três principais comidas que mais foram degustados por nosso clientes famintos...!</p>
-    <p>Depois vocês vão olhar os nossos Cardapios do restaurante...</p>
-    <p>E finalmente, vocês seguirem a gente nas redes sociais e o nosso endereço...</p>
-    <p>Apenas clicando no ultimo link na aba esquerda.</p>
+    <h1 style="text-align: center;">O que karambas é a gente?!</h1>
+    <p style="text-align: center;">[Bom dia, apreciadores de São Paulo! Como estão? É com grande entusiasmo que damos as boas-vindas ao nosso incrível e inusitado restaurante.]</p>
+    <p style="text-align: center;">[Apresentando os três pratos mais apreciados pelos nossos clientes famintos. Preparem-se para deliciar-se com essas iguarias!]</p>
+    <p style="text-align: center;">[Em seguida, convidamos vocês a explorar os nossos cardápios do restaurante!]</p>
+    <p style="text-align: center;">[Por fim, convidamos vocês a nos seguir nas redes sociais e conhecer o nosso endereço!]</p>
+    <p style="text-align: center;">[Basta clicar no último link na aba à esquerda para acessar.]</p>
 </article>
 </section>
 
 <footer>
     <p>
-    <h2>Olá :D</h2>
+    <h6>Informações acima</h6>
     </p>
 </footer>
 
