--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <!DOCTYPE html>
 <html>
-
+<body>
 <head>
   <style>
     body {
@@ -22,17 +22,17 @@
 </head>
 
 
-
 <h1 style="text-align: center;"><img
     src="https://static.vecteezy.com/system/resources/previews/009/291/628/original/restaurant-logo-design-vector.jpg"
     alt="9291628-restaurante-logo-design-vetor.png" width="500" height="400"></h1>
 
 <p style="text-align: center;">Nosso objetivo é servir o que há de melhor na gastronomia brasileira,<br>
   com a intenção de que nossos clientes possam desfrutar de comida feita na hora!!!</p>
-
+</body>
 </html>
 
 <html>
+<body>
 <h6 style="background-color: rgb(0, 0, 0);">Olá</h6>
 <h2 style="text-align: center;">Três principais comidas que mais foram pedidas!!!</h2>
 
@@ -48,21 +48,22 @@
 <h1 style="text-align: center;"><img
     src="https://www.sumerbol.com.br/uploads/images/2019/01/strogonoff-de-frango-1548843823.jpg"
     alt="strogonoff-de-frango-1548843823" width="400" height="300"></h1>
-
+</body>
 </html>
 
 <p style="background-color: rgb(0, 0, 0);">Você é otimo...</p>
 
 <!DOCTYPE html>
 <html>
-<style>
+<body>
+  <style>
   table,
   th,
   td {
     border: 1px solid rgb(0, 0, 0);
   }
 </style>
-
+</body>
 </head>
 
 </html>
@@ -115,6 +116,7 @@
 
 <!DOCTYPE html>
 <html>
+  <body>
 <style>
   table,
   th,
@@ -122,8 +124,6 @@
     border: 1px solid #fae600fa;
   }
 </style>
-
-<body>
 
   <h2 style="text-align: center;">BEBIDAS DELICIOSAS</h2>
 
@@ -192,7 +192,6 @@
   </tr>
   </table>
 </body>
-
 </html>
 
 <!DOCTYPE html>
@@ -246,6 +245,8 @@
     <th>R$100,00</th>
   </tr>
   </table>
+</body>
+</html>
 
   <h6 style="background-color: rgb(0, 0, 0);">Boa Tarde</h6>
 
@@ -271,9 +272,12 @@
       </h4>
     </ul>
     </p>
+  </body>]
+  </html>
+      
     <!DOCTYPE html>
     <html>
-
+<body>
     <head>
       <style>
         .nav {
@@ -291,6 +295,8 @@
         }
       </style>
     </head>
+</body>
+    </html>
 
     <body>
 
@@ -385,7 +391,7 @@
 
       <!DOCTYPE html>
       <html>
-
+<body>
       <head>
         <style>
           .city {
@@ -397,7 +403,9 @@
           }
         </style>
       </head>
-
+</body>
+      </html>
+      
       <body>
 
         <div class="city">
@@ -407,7 +415,7 @@
 
         <div class="city">
           <h2>Segunda Curiosidade</h2>
-          <p>Recebemos varios certificados pela limpeza do nosso restaurante, além de que os nosso <br>
+          <p>Recebemos varios certificados pela limpeza do nosso restaurante, apesar de que os nosso <br>
             clientes se sentirem confortaveis ao experimentarem um prato delicioso da nossa comida.</p>
         </div>
 
