--- a/index.html
+++ b/index.html
@@ -435,25 +435,26 @@
 <body>
 
   <div class="city">
-    <h2>Primeira Curiosidade</h2>
-    <h4>
-      <p>O Restaurant Tagline participou de um programa do Erick Jackan chamado Pesadelo na Cozinha.</p>
-    </h4>
+    <h2 style="text-align: center;">Primeira Curiosidade</h2>
+
+    <p style="text-align: center;">O Restaurant Tagline participou de um programa do Erick Jackan chamado Pesadelo na
+      Cozinha.</p>
+
   </div>
 
   <div class="city">
-    <h2>Segunda Curiosidade</h2>
-    <h4>
-      <p>Recebemos varios certificados pela limpeza do nosso restaurante, apesar de que os nosso <br>
-        clientes se sentirem confortaveis ao experimentarem um prato delicioso da nossa comida.</p>
-    </h4>
+    <h2 style="text-align: center;">Segunda Curiosidade</h2>
+
+    <p style="text-align: center;">Recebemos varios certificados pela limpeza do nosso restaurante, apesar de que os
+      nosso <br>
+      clientes se sentirem confortaveis ao experimentarem um prato delicioso da nossa comida.</p>
+
   </div>
 
   <div class="city">
-    <h2>Terceira Curiosidade</h2>
-    <h4>
-      <p>Os nossos clientes ficam curiosos quando perguntam sobre os preços dos nossos pratos...</p>
-    </h4>
+    <h2 style="text-align: center;">Terceira Curiosidade</h2>
+    <p style="text-align: center;">Os nossos clientes ficam curiosos quando perguntam sobre os preços dos nossos
+      pratos...</p>
   </div>
 
 </body>
