--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
   <p style="text-align: center;">Preencha o formulario com seus dados corretamente para concluir o seu cadastro:
   </p>
 
-  <form action="welcome.php" method="post">
+  <form action="formulario.html" method="post">
     Name: <input type="text" name="name"><br>
     E-mail: <input type="text" name="email"><br>
     Apelido: <input type="text" name="Apelido"><br>
@@ -404,8 +404,8 @@
       <option value="Chile">Chile</option>
       <option value="Colombia">Colombia</option>
       <option value="Venezuela">Venezuela</option>
+      <input type="submit" value="Okay">
     </select>
-    <input type="submit">
   </form>
 </body>
 
