--- a/restaurante.html
+++ b/restaurante.html
@@ -4,6 +4,7 @@
 <head>
     <title>restaurante</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
+
     <head>
         <style>
             body {
@@ -122,8 +123,9 @@
 
                 <body>
                     <p><a href="https://github.com/Lokistrange/pwi-lucas-chambi1">
-                            
-                            <p style="text-align: center;">Fique a vontade para explorar (index.html)</a></p>
+
+                            <p style="text-align: center;">Fique a vontade para explorar (index.html)
+                        </a></p>
                 </body>
 
 </html>
