--- a/restaurante.html
+++ b/restaurante.html
@@ -122,9 +122,9 @@
                 </html>
 
                 <body>
-                    <p><a href="https://github.com/Lokistrange/pwi-lucas-chambi1">
+                    <p><a href="index.html">
 
-                            <p style="text-align: center;">Fique a vontade para explorar (index.html)
+                            <p style="text-align: center;">Fique a vontade para explorar!
                         </a></p>
                 </body>
 
