--- a/restaurante.html
+++ b/restaurante.html
@@ -122,7 +122,7 @@
                 </html>
 
                 <body>
-                    <p><a href="index.html">
+                    <p><a href="index1.html">
 
                             <p style="text-align: center;">Fique a vontade para explorar!
                         </a></p>
