--- a/index1.html
+++ b/index1.html
@@ -15,6 +15,10 @@
       body {
         background-color: rgb(255, 208, 0);
       }
+    
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
     </style>
   </head>
 
