--- a/restaurante1.html
+++ b/restaurante1.html
@@ -20,7 +20,7 @@
         }
 
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: fantasy;
         }
 
         /* Style the header */
@@ -92,7 +92,7 @@
 
 
     <header>
-        <h2>-_Restaurante Tagline_-</h2>
+        <h2>RESTAURANTE TAGLINE</h2>
     </header>
 
     <section>
