--- a/formulario1.html
+++ b/formulario1.html
@@ -7,13 +7,35 @@
     <title>Criando formulario</title>
     <form>
         <h2>COMPREENDENDO FORMULARIO</h2>
-        <label for="primeironome">Nome: </label>
-        <input type="text" id="primeironome" name="primeironome" value="">
-        <label for="sobrenome">Sobrenome: </label>
-        <input type="text" id="sobrenome" name="sobrenome" value="">
+        <label for="primeironome">Full-name: </label>
+        <input type="text" id="full-name" name="full-name" value="">
+        <br>
+        <label for="Apelido">Nickname </label>
+        <input type="text" id="Nickname" name="Nickname" value="">
+        <br>
+        <label for="CPF">Digite seu CPF: </label>
+        <input type="number" id="Digite seu CPF" name="Digite seu CPF" value="">
+        <br>
+        <label for="RG">Digite seu RG: </label>
+        <input type="number" id="Digite seu RG" name="Digite seu RG" value="">
+        <br>
         <label for="email"> Email: </label>
         <input type="email" id="email" name="email" value="">
-
+        <br>
+        País: <select id="País" name="País"></p>
+            <option value="Argentina">Argentina</option>
+            <option value="Brasil">Brasil</option>
+            <option value="Bolivia">Bolivia</option>
+            <option value="Equador">Equador</option>
+            <option value="Paraguai">Paraguai</option>
+            <option value="Uruguai">Uruguai</option>
+            <option value="Peru">Peru</option>
+            <option value="Chile">Chile</option>
+            <option value="Colombia">Colombia</option>
+            <option value="Venezuela">Venezuela</option>
+            <input type="submit">
+        </select>
+        <br>
         <h2>CONHECENDO NOSSO CLIENTE</h2>
         <h3>Qual time (Brasil) você torce?</h3>
         <input type="radio" id="Opcao1" name="fav_language" value="Opção1">
