--- a/formulario1.html
+++ b/formulario1.html
@@ -10,7 +10,7 @@
         <label for="primeironome">Full-name: </label>
         <input type="text" id="full-name" name="full-name" value="">
         <br>
-        <label for="Apelido">Nickname </label>
+        <label for="Apelido">Nickname: </label>
         <input type="text" id="Nickname" name="Nickname" value="">
         <br>
         <label for="CPF">Digite seu CPF: </label>
@@ -33,17 +33,30 @@
             <option value="Chile">Chile</option>
             <option value="Colombia">Colombia</option>
             <option value="Venezuela">Venezuela</option>
-            <input type="submit">
         </select>
         <br>
         <h2>CONHECENDO NOSSO CLIENTE</h2>
-        <h3>Qual time (Brasil) você torce?</h3>
+        <h3>Qual time do Brasil você torce no futebol?</h3>
         <input type="radio" id="Opcao1" name="fav_language" value="Opção1">
         <label for="Complexo do Corinthians">Complexo do Corinthians</label><br>
         <input type="radio" id="Opcao2" name="fav_language" value="Opção2">
         <label for="Vasco">Vasco</label><br>
-        <input type="radio" id="Opcao3" name="fav_language" value="Opção2">
-        <label for="Olimpo">Olimpo</label><br>
+        <input type="radio" id="Opcao3" name="fav_language" value="Opção3">
+        <label for="SP">São Paulo</label><br>
+        <input type="radio" id="Opcao4" name="fav_language" value="Opção4">
+        <label for="Flamengo">Flamengo</label><br>
+        <input type="radio" id="Opcao5" name="fav_language" value="Opção5">
+        <label for="SP">São Paulo</label><br>
+        <input type="radio" id="Opcao6" name="fav_language" value="Opção6">
+        <label for="fluminense">Fluminense</label><br>
+        <input type="radio" id="Opcao7" name="fav_language" value="Opção7">
+        <label for="Gremio">Gremio</label><br>
+        <input type="radio" id="Opcao8" name="fav_language" value="Opção8">
+        <label for="Santos">Santos</label><br>
+        <input type="radio" id="Opcao9" name="fav_language" value="Opção9">
+        <label for="Palmeiras">Palmeiras</label><br>
+        <label for="Outro">Outro: </label>
+        <input type="text" id="Opcao10" name="fav_language" value="">
 
         <h2>MELHOR CLÃ DE COLISEU</h2>
 
