--- a/formulario1.html
+++ b/formulario1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -37,35 +37,70 @@
         <br>
         <h2>CONHECENDO NOSSO CLIENTE</h2>
         <h3>Qual time do Brasil você torce no futebol?</h3>
-        <input type="radio" id="Opcao1" name="fav_language" value="Opção1">
+        <input type="radio" id="Opcao1" name="fav_language" value="">
         <label for="Complexo do Corinthians">Complexo do Corinthians</label><br>
-        <input type="radio" id="Opcao2" name="fav_language" value="Opção2">
+        <input type="radio" id="Opcao2" name="fav_language" value="">
         <label for="Vasco">Vasco</label><br>
-        <input type="radio" id="Opcao3" name="fav_language" value="Opção3">
+        <input type="radio" id="Opcao3" name="fav_language" value="">
         <label for="SP">São Paulo</label><br>
-        <input type="radio" id="Opcao4" name="fav_language" value="Opção4">
+        <input type="radio" id="Opcao4" name="fav_language" value="">
         <label for="Flamengo">Flamengo</label><br>
-        <input type="radio" id="Opcao5" name="fav_language" value="Opção5">
+        <input type="radio" id="Opcao5" name="fav_language" value="">
         <label for="SP">São Paulo</label><br>
-        <input type="radio" id="Opcao6" name="fav_language" value="Opção6">
+        <input type="radio" id="Opcao6" name="fav_language" value="">
         <label for="fluminense">Fluminense</label><br>
-        <input type="radio" id="Opcao7" name="fav_language" value="Opção7">
+        <input type="radio" id="Opcao7" name="fav_language" value="">
         <label for="Gremio">Gremio</label><br>
-        <input type="radio" id="Opcao8" name="fav_language" value="Opção8">
+        <input type="radio" id="Opcao8" name="fav_language" value="">
         <label for="Santos">Santos</label><br>
-        <input type="radio" id="Opcao9" name="fav_language" value="Opção9">
+        <input type="radio" id="Opcao9" name="fav_language" value="">
         <label for="Palmeiras">Palmeiras</label><br>
         <label for="Outro">Outro: </label>
         <input type="text" id="Opcao10" name="fav_language" value="">
 
-        <h2>MELHOR CLÃ DE COLISEU</h2>
+        <h2>SOBRE O RESTAURANTE TAGLINE</h2>
+        <h2>AVALIAÇÃO DA COMIDA</h2>
+        <h3>1° Como você avaliaria a qualidade da comida?</h3>
+        <input type="radio" id="Opcao1" name="fav_language" value="">
+        <label for="Excelente">Excelente</label><br>
+        <input type="radio" id="Opcao2" name="fav_language" value="">
+        <label for="Boa">Boa</label><br>
+        <input type="radio" id="Opcao3" name="fav_language" value="">
+        <label for="Regular">Regular</label><br>
+        <input type="radio" id="Opcao4" name="fav_language" value="">
+        <label for="Ruim">Ruim</label><br>
+        <input type="radio" id="Opcao5" name="fav_language" value="">
+        <label for="Muito ruim">Muito ruim</label>
 
-        <input type="checkbox" id="gato1" name="gato1" value="Depay">
-        <label for="ST">STrawberryTea</label><br>
-        <input type="checkbox" id="gato2" name="gato2" value="Depay">
-        <label for="Ranked Beasts">Ranked Beasts</label><br>
-        <input type="checkbox" id="gato3" name="gato3" value="Depay">
-        <label for="Imimigos da moda">Inimigos da Moda</label><br>
+<h4>(NÃO CONCLUÍDO AINDA NA PROGRAMAÇÃO...)</h4>
+
+        <h3>2° O cardapio atendeu as suas expectativas? (não concluída)</h3>
+
+        <input type="radio" id="html" name="fav_language" value="">
+        <label for="Sim, superou">Sim, superou!</label><br>
+        <input type="radio" id="html" name="fav_language" value="">
+        <label for="Sim, atendeu">Sim, Atendeu</label><br>
+        <input type="radio" id="html" name="fav_language" value="">
+        <label for="Não, poderia ser melhor">Não, poderia ser melhor</label><br>
+        <input type="radio" id="html" name="fav_language" value="">
+        <label for="Não, não atendeu">Não, não atendeu</label><br>
+
+        <h3><label for="Outro">3° Qual foi o seu prato favorito? (não concluída)</label></h3>
+        R:<input type="text" id="text" name="fav_language" value="">
+
+        <h2>AVALIAÇÃO DO SERVIÇO</h2>
+        <h3>1° Como você avaliaria o atendimento dos funcionarios?</h3>
+        
+        <input type="radio" id="Muito bom" name="fav_language" value="MUITO BOM">
+        <label for="Muito bom">Muito bom</label><br>
+        <input type="radio" id="Bom" name="fav_language" value="BOM">
+        <label for="Bom">Bom</label><br>
+        <input type="radio" id="Regular" name="fav_language" value="REGULAR">
+        <label for="Regular">Regular</label><br>
+        <input type="radio" id="Ruim" name="fav_language" value="RUIM">
+        <label for="Ruim">Ruim</label><br>
+        <input type="radio" id="Muito ruim" name="fav_language" value="MUITO RUIM">
+        <label for="Muito ruim">Muito ruim</label><br>
         <br>
         <input type="submit" value="okay">
     </form>
