--- a/formulario1.html
+++ b/formulario1.html
@@ -22,7 +22,7 @@
         <label for="email"> Email: </label>
         <input type="email" id="email" name="email" value="">
         <br>
-        País: <select id="País" name="País"></p>
+        País: <select id="País" name="País">
             <option value="Argentina">Argentina</option>
             <option value="Brasil">Brasil</option>
             <option value="Bolivia">Bolivia</option>
@@ -72,7 +72,7 @@
         <input type="radio" id="Opcao5" name="fav_language" value="">
         <label for="Muito ruim">Muito ruim</label>
 
-<h4>(NÃO CONCLUÍDO AINDA NA PROGRAMAÇÃO...)</h4>
+        <h4>(NÃO CONCLUÍDO AINDA NA PROGRAMAÇÃO...)</h4>
 
         <h3>2° O cardapio atendeu as suas expectativas? (não concluída)</h3>
 
@@ -90,7 +90,7 @@
 
         <h2>AVALIAÇÃO DO SERVIÇO</h2>
         <h3>1° Como você avaliaria o atendimento dos funcionarios?</h3>
-        
+
         <input type="radio" id="Muito bom" name="fav_language" value="MUITO BOM">
         <label for="Muito bom">Muito bom</label><br>
         <input type="radio" id="Bom" name="fav_language" value="BOM">
