--- a/formulario2.html
+++ b/formulario2.html
@@ -60,7 +60,7 @@
 
         <h2>SOBRE O RESTAURANTE TAGLINE</h2>
         <h2>AVALIAÇÃO DA COMIDA</h2>
-        <h3>1° Como você avaliaria a qualidade da comida?</h3>
+        <h3>Como você avaliaria a qualidade da comida?</h3>
         <input type="radio" id="Opcao1" name="fav_language" value="">
         <label for="Excelente">Excelente</label><br>
         <input type="radio" id="Opcao2" name="fav_language" value="">
@@ -74,7 +74,7 @@
 
         <h4>(NÃO CONCLUÍDO AINDA NA PROGRAMAÇÃO...)</h4>
 
-        <h3>2° O cardapio atendeu as suas expectativas? (não concluída)</h3>
+        <h3>O cardapio atendeu as suas expectativas?</h3>
 
         <input type="radio" id="html" name="fav_language" value="">
         <label for="Sim, superou">Sim, superou!</label><br>
@@ -85,11 +85,11 @@
         <input type="radio" id="html" name="fav_language" value="">
         <label for="Não, não atendeu">Não, não atendeu</label><br>
 
-        <h3><label for="Outro">3° Qual foi o seu prato favorito? (não concluída)</label></h3>
+        <h3><label for="Outro">3° Qual foi o seu prato favorito?</label></h3>
         R:<input type="text" id="text" name="fav_language" value="">
 
         <h2>AVALIAÇÃO DO SERVIÇO</h2>
-        <h3>1° Como você avaliaria o atendimento dos funcionarios?</h3>
+        <h3>Como você avaliaria o atendimento dos funcionarios?</h3>
 
         <input type="radio" id="Muito bom" name="fav_language" value="MUITO BOM">
         <label for="Muito bom">Muito bom</label><br>
@@ -101,6 +101,57 @@
         <label for="Ruim">Ruim</label><br>
         <input type="radio" id="Muito ruim" name="fav_language" value="MUITO RUIM">
         <label for="Muito ruim">Muito ruim</label><br>
+
+        <h3>O tempo de espera pelo seu pedido foi satisfatorio?</h3>
+
+        <input type="radio" id="Muito satisfatorio" name="fav_language" value="MUITO SATISFATORIO">
+        <label for="Muito satisfatorio">Muito satisfatorio</label><br>
+        <input type="radio" id="Satisfeito" name="fav_language" value="SATISFEITO">
+        <label for="Satisfeito">Satisfeito</label><br>
+        <input type="radio" id="Regular" name="fav_language" value="REGULAR">
+        <label for="Regular">Regular</label><br>
+        <input type="radio" id="Insatisfatorio" name="fav_language" value="INSATISFATORIO">
+        <label fot="Insatisfatorio">Insatisfatorio</label><br>
+        <input type="radio" id="Muito insatisfatorio" name="fav_language" value="MUITO INSATISFATORIO">
+        <label for="Muito insatisfatorio">Muito insatisfatorio</label><br>
+
+        <h3>Os funcionarios foram prestativos e atenciosos?</h3>
+        <input type="radio" id="Sempre" name="fav_language" value="SEMPRE">
+        <label for="Sempre">Sempre</label><br>
+        <input type="radio" id="Na maioria das vezes" name="fav_language" value="NA MAIORIA DAS VEZES">
+        <label for="Na maioria das vezes">Na maioria das vezes</label><br>
+        <input type="radio" id="As vezes" name="fav_language" value="AS VEZES">
+        <label for="As vezes">As vezes</label><br>
+        <input type="radio" id="Raramente" name="fav_language" value="RARAMENTE">
+        <label for="Raramente">Raramente</label><br>
+        <input type="radio" id="Nunca" name="fav_language" value="NUNCA">
+        <label for="Nunca">Nunca</label><br>
+
+        <h2>AVALIAÇÃO DO AMBIENTE</h2>
+        <h3>O ambiente foi agradavel e confortável?</h3>
+        <input type="radio" id="Muito agradavel" name="fav_language" value="MUITO AGRADAVEL">
+        <label for="Muito agradavel">Muito agradavel</label><br>
+        <input type="radio" id="Agradavel" name="fav_language" value="AGRADAVEL">
+        <label for="Agradavel">Agradavel</label><br>
+        <input type="radio" id="Neutro" name="fav_language" value="NEUTRO">
+        <label for="Neutro">Neutro</label><br>
+        <input type="radio" id="Desagradavel" name="fav_language" value="Desagradavel">
+        <label for="Desagradavel">Desagradavel</label><br>
+        <input type="radio" id="Muito Desagradavel" name="fav_language" value="MUITO DESAGRADAVEL">
+        <label for="Muito Desagradavel">Muito desagradavel</label><br>
+
+        <h3>Você recomendaria nosso restaurante a seus amigos e familiares?</h3>
+        <input type="radio" id="Com certeza" name="fav_language" value="COM CEERTEZA">
+        <label for="Com certeza">Com certeza</label><br>
+        <input type="radio" id="Talvez" name="fav_language" value="TALVEZ">
+        <label for="Talvez">Talvez</label><br>
+        <input type="radio" id="provavelmente não" name="fav_language" value="PROVAVELMENTE NÃO">
+        <label for="Provavelmente não">Provavelmente não</label><br>
+        <input type="radio" id="De jeito nenhum" name="fav_language" value="DE JEITO NENHUM">
+        <label for="De jeito nenhum">De jeito nenhum</label><br>
+
+        <h3><label for="Outro">Há allgo que você gostariade sugerir ou comentar?</label></h3>
+        R:<input type="text" id="text" name="fav_language" value=""><br>
         <br>
         <input type="submit" value="okay">
     </form>
