--- a/formulario2.html
+++ b/formulario2.html
@@ -2,6 +2,11 @@
 <html lang="pt-br">
 
 <head>
+    <style>
+        body {
+            background-color: rgb(233, 171, 0);
+        }
+    </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-widht, " initial=height-initial>
     <title>Criando formulario</title>
