--- a/javascript.html
+++ b/javascript.html
@@ -2,13 +2,26 @@
 <html>
 
 <body>
+ 
+    <h2 style="text-align: center;">Mudando um elemento HTML</h2>
 
-    <h2>Mudando um elemento</h2>
+    <style>
+        body {
+            background-color: rgb(0, 136, 255);
+        }
+    </style>
 
-    <p id="demo">JavaScript consegue mudar o elemento HTML</p>
+    <h2 style="text-align: center;">
+        <p id="demo">Feliz aniversario Jade, que você tenha muitos anos de vida e de saúde também!!!</p>
+    </h2>
 
-    <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello World"'>Me clique pls</button>
-
+    <h2 style="text-align: center;"><button type="button"
+            onclick='document.getElementById("demo").innerHTML = "QUE VOCÊ TAMBÉM HAJA SUCESSO NA SUA CARREIRA DE VIDA, ALÉM DE QUE VOCÊ TAMBÉM TENHA BONS AMIGOS NO FUTURO!!"'>Me
+            clique pls</button></h3>
+        <br>
+        <h1 style="text-align: center;"><img
+                src="https://img.irroba.com.br/fit-in/600x600/filters:fill(fff):quality(80)/estampar/catalog/painel-redondo/novos/painel.20230829133317.jpg"
+                alt="painel.20230829133317" width="500" height="500"></h1>
 </body>
 
 </html>
