--- a/javascript.html
+++ b/javascript.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-widht, " initial=height-initial>
 
 <body>
- 
+
     <h2 style="text-align: center;">Mudando um elemento HTML</h2>
 
     <style>
