--- a/cssexterno.html
+++ b/cssexterno.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <link rel="stylesheet" href="./style/cssexterno.css">
     <title>Meu Css externo</title>
 </head>
-
 <body>
     <p>Ola turma!!!</p>
-
 </body>
 
 </html>
