--- a/javascript.html
+++ b/javascript.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <h2 style="text-align: center;">Mudando um elemento HTML</h2>
+    <h2 style="text-align: center;">Olá, estou mudando um elemento HTML</h2>
 
     <style>
         body {
@@ -16,7 +16,7 @@
     </style>
 
     <h2 style="text-align: center;">
-        <p id="demo">Feliz aniversario Jade, que você tenha muitos anos de vida e de saúde também!!!</p>
+        <p id="demo">Feliz aniversario _______________, que você tenha muitos anos de vida e de saúde também!!!</p>
     </h2>
 
     <h2 style="text-align: center;"><button type="button"
@@ -25,7 +25,7 @@
         <br>
         <h1 style="text-align: center;"><img
                 src="https://img.irroba.com.br/fit-in/600x600/filters:fill(fff):quality(80)/estampar/catalog/painel-redondo/novos/painel.20230829133317.jpg"
-                alt="painel.20230829133317" width="500" height="500"></h1>
+                alt="painel.20230829133317" width="400" height="400"></h1>
 </body>
 
 </html>
