--- a/restaurante1.html
+++ b/restaurante1.html
@@ -103,19 +103,15 @@
                 <li><a href="#">
                         <p style="text-align: center;">Os pratos mais servidos da casa!
                     </a></li>
-                <br>
                 <li><a href="#">
                         <p style="text-align: center;">Cardapios do Restaurante Tagline!
                     </a></li>
-                <br>
                 <li><a href="#">
                         <p style="text-align: center;">Sigam a gente nas redes sociais!
                     </a></li>
-                <br>
                 <li><a href="#">
                         <p style="text-align: center;">Formulário!
                     </a></li>
-                <br>
                 <li><a href="#">
                         <p style="text-align: center;"> Curiosidades!
                     </a></li>
@@ -138,16 +134,14 @@
 
 <article>
     <h1 style="text-align: center;">O que karambas é a gente?!</h1>
-    <!-- <p>This is another paragraph </p> -->
-    <p style="text-align: center;">[Bom dia, apreciadores de São Paulo! Como estão? É com grande entusiasmo que damos as
-        boas-vindas ao nosso incrível e inusitado restaurante.]</p>
-    <p style="text-align: center;">[Apresentando os três pratos mais apreciados pelos nossos clientes famintos.
-        Preparem-se para deliciar-se com essas iguarias!]</p>
-    <p style="text-align: center;">[Em seguida, convidamos vocês a explorar os nossos cardápios do restaurante!]</p>
-    <p style="text-align: center;">[Por fim, convidamos vocês a nos seguir nas redes sociais e conhecer o nosso
-        endereço!]</p>
-    <p style="text-align: center;">[Basta clicar no último link na aba à esquerda para acessar.]</p>
-    <!-- <p>This is another paragraph </p> -->
+    <p style="text-align: center;">Bom dia, apreciadores de São Paulo! Como estão? É com grande entusiasmo que damos as
+        boas-vindas ao nosso incrível e inusitado restaurante.</p>
+    <p style="text-align: center;">Apresentando os três pratos mais apreciados pelos nossos clientes famintos.
+        Preparem-se para deliciar-se com essas iguarias!</p>
+    <p style="text-align: center;">Em seguida, convidamos vocês a explorar os nossos cardápios do restaurante!</p>
+    <p style="text-align: center;">Por fim, convidamos vocês a nos seguir nas redes sociais e conhecer o nosso
+        endereço!</p>
+    <p style="text-align: center;">Basta clicar no último link na aba à esquerda para acessar.</p>
 
 </article>
 </section>
