--- a/index1.html
+++ b/index1.html
@@ -273,16 +273,10 @@
   <p>
   <ul>
     <h4>
-      <li>FACEBOOK: PiorPrato</li>
-    </h4>
-    <h4>
       <li>INSTAGRAM: piorprato</li>
     </h4>
     <h4>
-      <li>BLUESKY: piorprato.bsky.social</li>
-    </h4>
-    <h4>
-      <li>THREADS: piorprato</li>
+      <li>TWITTER: @piorprato</li>
     </h4>
   </ul>
   </p>
@@ -318,10 +312,8 @@
 <body>
 
   <ul class="nav">
-    <li><a href="#facebook">Facebook</a></li>
-    <li><a href="#instagram">Instagram</a></li>
-    <li><a href="#bluesky">Bluesky</a></li>
-    <li><a href="#threads">Threads</a></li>
+    <li><a href="https://www.instagram.com/kinubiyosoy/">Instagram</a></li>
+    <li><a href="https://x.com/LokistrangeBH">Twitter</a></li>
   </ul>
 
 </body>
@@ -365,24 +357,21 @@
   <div class="city">
     <h2 style="text-align: center;">Primeira Curiosidade</h2>
 
-    <p style="text-align: center;">O Restaurant Tagline participou de um programa do Erick Jackan chamado Pesadelo na
-      Cozinha.</p>
+    <p style="text-align: center;">O Restaurant Tagline participou de um programa do Erick Jackan chamado Pesadelo na Cozinha.</p>
 
   </div>
 
   <div class="city">
     <h2 style="text-align: center;">Segunda Curiosidade</h2>
 
-    <p style="text-align: center;">Recebemos varios certificados pela limpeza do nosso restaurante, apesar de que os
-      nosso <br>
+    <p style="text-align: center;">Recebemos varios certificados pela limpeza do nosso restaurante, apesar de que os nosso <br>
       clientes se sentirem confortaveis ao experimentarem um prato delicioso da nossa comida.</p>
 
   </div>
 
   <div class="city">
     <h2 style="text-align: center;">Terceira Curiosidade</h2>
-    <p style="text-align: center;">Os nossos clientes ficam curiosos quando perguntam sobre os preços dos nossos
-      pratos...</p>
+    <p style="text-align: center;">Os nossos clientes ficam curiosos quando perguntam sobre os preços dos nossos pratos...</p>
   </div>
 
 </body>
@@ -459,5 +448,4 @@
     </select>
   </form>
 </body>
-
 </html>
