--- a/index1.html
+++ b/index1.html
@@ -78,17 +78,12 @@
 
 <h2 style="text-align: center;">COMIDAS DELICIOSAS</h2>
 
-<table style="width: 50%">
+<table style="width: 100%">
   <h4 style="text-align: center;">
   </h4>
   <tr>
-    <th>
-      <p>ALMOÇO
-    </th>
-    </p>
-    <th>
-      <p>PREÇO
-    </th>
+    <th><p>ALMOÇO</p></th>
+    <th>PREÇO</th>
   </tr>
   <tr>
     <th>Virada Paulista</th>
@@ -134,17 +129,15 @@
     table,
     th,
     td {
-      border: 1px solid #fae600fa;
+      border: 1px solid #f1efd9fa;
     }
   </style>
   <h2 style="text-align: center;">BEBIDAS DELICIOSAS</h2>
 
-  <h3 style="text-align: center;">
-    <table style="width:50%">
+  <h4 style="text-align: center;">
+    <table style="width:100%">
       <tr>
-        <th>
-          <p>SUCOS</p>
-        </th>
+        <th><p>SUCOS</p></th>
         <th>PREÇO</th>
       </tr>
       <tr>
@@ -220,13 +213,10 @@
 <body>
 
   <h2 style="text-align: center;">PORÇÕES DELICIOSAS</h2>
-  <table style="width:50%">
-    </h4>
+  <table style="width:100%">
 
     <tr>
-      <th>
-        <p>PORÇÕES</p>
-      </th>
+      <th><p>PORÇÕES</p></th>
       <th>VALOR</th>
     </tr>
     <tr>
@@ -448,4 +438,5 @@
     </select>
   </form>
 </body>
+
 </html>
