--- a/index1.html
+++ b/index1.html
@@ -20,10 +20,9 @@
   </head>
   <h1 style="text-align: center;"><img
       src="https://static.vecteezy.com/system/resources/previews/009/291/628/original/restaurant-logo-design-vector.jpg"
-      alt="9291628-restaurante-logo-design-vetor.png" width="600" height="400"></h1>
+      alt="9291628-restaurante-logo-design-vetor.png" width="700" height="500"></h1>
 
-  <p style="text-align: center;">Nosso objetivo é servir o que há de melhor na gastronomia brasileira,<br>
-    com a intenção de que nossos clientes possam desfrutar de comida feita na hora!!!</p>
+  <h4><p style="text-align: center;">Nosso objetivo é servir o que há de melhor na gastronomia brasileira, com a intenção de que nossos clientes possam desfrutar de comida feita na hora!!!</p></h4>
 </body>
 </html>
 
@@ -32,15 +31,15 @@
 <body>
   <h6 style="background-color: rgb(0, 0, 0);">Olá</h6>
   <h2>
-    <p style="text-align: center;">Três principais comidas que mais foram pedidas!!!
+    <p style="text-align: center;">Três principais comidas mais pedidas!!!
   </h2>
   </p>
   <h3>
-    <p style="text-align: center;">VIRADA PAU-LISTA
+    <p style="text-align: center;">VIRADA PAULISTA
   </h3>
   </p>
   <h1 style="text-align: center;"><img src="https://t3.ftcdn.net/jpg/03/78/61/60/360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg"
-      alt="360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg" width="585" height="390"></h1>
+      alt="360_F_378616046_XbZYWgjn5RKLco0PVrH6nCyfdlknJw8g.jpg" width="700" height="500"></h1>
   <h3>
     <p style="text-align: center;">FEIJOADA
   </h3>
@@ -79,8 +78,6 @@
 <h2 style="text-align: center;">COMIDAS DELICIOSAS</h2>
 
 <table style="width: 100%">
-  <h4 style="text-align: center;">
-  </h4>
   <tr>
     <th><p>ALMOÇO</p></th>
     <th>PREÇO</th>
@@ -134,7 +131,6 @@
   </style>
   <h2 style="text-align: center;">BEBIDAS DELICIOSAS</h2>
 
-  <h4 style="text-align: center;">
     <table style="width:100%">
       <tr>
         <th><p>SUCOS</p></th>
