--- a/restaurante1.html
+++ b/restaurante1.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-widht, " initial=height-initial>
+    <link rel="stylesheet" href="./style/background.css">
     <title>restaurante</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/128/272/272609.png">
 
@@ -71,7 +72,7 @@
             background-color: #000000;
             padding: 1px;
             text-align: center;
-            color: rgb(255, 255, 255);
+            color: rgb(254, 255, 249);
         }
 
         /* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
